vpc_v1/sg.tf
resource "aws_security_group" "sg_dev"{
    name = "dev_instance"
    description = "this sg is for dev instance"
    vpc_id = aws_vpc.first_vpc.id
    tags = {
      Name = "${var.env}- web-sg"
    }
    ingress {
    description      = "for http "
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  ingress {
    description      = "for ssh"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]

  }
}
